--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,18 @@
 name = "tease"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Chris McComb <ccmcc2012@gmail.com>"]
+description = "Rapidly prototype your machine learning models"
+readme = "README.md"
+repository = "https://github.com/cmccomb/tease"
+homepage = "https://github.com/cmccomb/tease"
+documentation = "https://docs.rs/tease"
+license = "MIT OR Apache-2.0"
+keywords = ["machine-learning", "ml", "ai", "smartcore", "gui"]
+categories = ["algorithms", "mathematics", "gui"]
 
 [dependencies]
-smartcore = "0.2.1"
 wry = "0.18.2"
-human_regex = "0.2.3"
+
+[dev-dependencies]
+smartcore = "0.2.1"
