--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tease"
 version = "0.1.0"
 edition = "2021"
 authors = ["Chris McComb <ccmcc2012@gmail.com>"]
-description = "Rapidly demo your machine learning models"
+description = "Rapidly prototype interfaces for your machine learning models"
 readme = "README.md"
 repository = "https://github.com/cmccomb/tease"
 homepage = "https://github.com/cmccomb/tease"
